[package]
name = "argentum_game_coordinate_system_macros"
version = "0.1.0"
edition = "2021"
description = "Argentum: Coordinate System Macros"
license = "AGPL-3.0-or-later"

[lib]
proc-macro = true

[dependencies]
bimap = "0.6.3"
convert_case = "0.6.0"
proc-macro2 = "1.0.86"
quote = "1.0.36"
syn = "2.0.75"
